--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -12,6 +12,8 @@
     </header>
     <main>
         <p>This is a simple static website created using HTML and CSS.</p>
+        <p>THis is a change in the html page.</p>
+
     </main>
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
